# styrmin-demo-infrahub

./: .gitignore  .infrahub.yml  README.md  ansible.cfg  main.py  pyproject.toml  tasks.py
ansible/: ansible.cfg  deploy.yml  fetch_infrahub_info.yml  inventory.yml  requirements.yml
ansible/inventory/: infrahub_inv.yml
objects/: 01_location.yml  04_manufacturer.yml  05_resource_pools.yml  06_device_type.yml  07_device_template.yml  08_device.yml
schemas/base/: dcim.yml  ipam.yml  location.yml  organization.yml
schemas/location_minimal/: README.md  location_minimal.yml
styrmin/: do-values.yaml  values.yaml
tasks/: __init__.py  do.py  infrahub.py  styrmin.py
